[package]
name = "aoc19"
version = "0.1.0"
authors = ["MaxOhn <ohn.m@hotmail.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.8.2"
crossbeam = "0.7"
num = "0.2"
pathfinding = "2.0.3"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "benchmarks"
harness = false