[package]
name = "aoc22"
version = "0.1.0"
edition = "2021"

[dependencies]
core_simd = { git = "https://github.com/rust-lang/portable-simd" }
rayon = "1.6.0"
memchr = "2.5.0"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
memmap = "0.7.0"

[dev-dependencies]
criterion = "*"

[[bench]]
name = "aoc22-bench"
harness = false
