[package]
name = "aoc22"
version = "0.1.0"
edition = "2021"

[dependencies]
core_simd = { git = "https://github.com/rust-lang/portable-simd", optional = true }
eyre = "0.6.8"
rayon = "1.6.0"
memchr = "2.5.0"
nom = "7.1.1"
regex = "1.7.0"
once_cell = "1.16.0"

[features]
default = []
nightly = ["core_simd"]

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
memmap = "0.7.0"

[dev-dependencies]
criterion = "*"

[[bench]]
name = "aoc22-bench"
harness = false
