[package]
name = "aoc24"
version = "0.1.0"
edition = "2021"

[dependencies]
ahash = "0.8.11"
aoc-rust = { path = "../aoc-rust" }
eyre = "0.6.9"
fxhash = "0.2.1"
itoa = "1.0.14"
memchr = "2.7.4"
nom = "7.1.3"
rayon = "1.10.0"

[dev-dependencies]
divan = "0.1.16"

[[bench]]
name = "day02"
harness = false

[[bench]]
name = "day04"
harness = false

[[bench]]
name = "day05"
harness = false

[[bench]]
name = "day07"
harness = false

[[bench]]
name = "day11"
harness = false

[[bench]]
name = "day23"
harness = false
