[package]
name = "aoc-solver"
version = "0.1.0"
edition = "2021"

[dependencies]
console_error_panic_hook = "0.1"
leptos = { version = "0.5", features = ["csr", "nightly"] }
leptos_meta = { version = "0.5", features = ["csr", "nightly"] }
leptos_router = { version = "0.5", features = ["csr", "nightly"] }
serde = { version = "1.0.193", features = ["derive"] }
tracing-subscriber = { version = "0.3.18", default-features = false, features = ["fmt", "std"] }
tracing-subscriber-wasm = { version = "0.1.0" }
wasm-bindgen = "=0.2.88"
tracing = { version = "0.1.37" }
web-sys = { version = "0.3.65" } # required features will be included by leptos

[features]
default = ["log-all"]
log-all = ["tracing-subscriber/env-filter"]

[profile.wasm-release]
inherits = "release"
opt-level = 'z'
lto = true
codegen-units = 1
panic = "abort"