[package]
name = "aoc-solver"
version = "0.1.0"
edition = "2021"

[dependencies]
aoc15_day07 = { path = "../2015/day07" }
aoc16_day03 = { path = "../2016/day03" }
aoc16_day04 = { path = "../2016/day04" }
aoc16_day05 = { path = "../2016/day05" }
aoc16_day06 = { path = "../2016/day06" }
aoc16_day07 = { path = "../2016/day07" }
aoc16_day08 = { path = "../2016/day08" }
aoc16_day09 = { path = "../2016/day09" }
aoc16_day10 = { path = "../2016/day10" }
aoc16_day11 = { path = "../2016/day11" }
aoc16_day12 = { path = "../2016/day12" }
aoc16_day13 = { path = "../2016/day13" }
aoc16_day14 = { path = "../2016/day14" }
aoc16_day15 = { path = "../2016/day15" }
aoc16_day16 = { path = "../2016/day16" }
aoc22 = { path = "../2022" }

aoc-rust = { path = "../aoc-rust" }
console_error_panic_hook = { version = "0.1" }
eyre = { version = "0.6.9" }
leptos = { version = "0.5", features = ["csr", "nightly"] }
leptos_meta = { version = "0.5", features = ["csr", "nightly"] }
leptos_router = { version = "0.5", features = ["csr", "nightly"] }
tracing = { version = "0.1.37" }
tracing-subscriber = { version = "0.3.18", default-features = false, features = ["fmt", "std"] }
tracing-subscriber-wasm = { version = "0.1.0" }
wasm-bindgen = { version = "0.2.89" }
wasm-timer = { version = "0.2.5" }
web-sys = { version = "0.3.65" } # required features will be included by leptos
wee_alloc = { version = "0.4.5" }

[features]
default = ["log-all"]
log-all = ["tracing-subscriber/env-filter"]

[profile.wasm-release]
inherits = "release"
opt-level = 'z'
lto = true
codegen-units = 1
panic = "abort"
