[package]
name = "aoc-solver"
version = "0.1.0"
edition = "2021"

[dependencies]
aoc15 = { path = "../2015" }
aoc16 = { path = "../2016" }
aoc19 = { path = "../2019" }
aoc20 = { path = "../2020" }
aoc22 = { path = "../2022" }

aoc-rust = { path = "../aoc-rust" }
console_error_panic_hook = { version = "0.1" }
eyre = { version = "0.6.9" }
leptos = { version = "0.5", features = ["csr", "nightly"] }
leptos_meta = { version = "0.5", features = ["csr", "nightly"] }
leptos_router = { version = "0.5", features = ["csr", "nightly"] }
tracing = { version = "0.1.37" }
tracing-subscriber = { version = "0.3.18", default-features = false, features = ["fmt", "std"] }
tracing-subscriber-wasm = { version = "0.1.0" }
wasm-bindgen = { version = "0.2.89" }
wasm-timer = { version = "0.2.5" }
web-sys = { version = "0.3.65" } # required features will be included by leptos
wee_alloc = { version = "0.4.5" }

[features]
default = ["log-all"]
log-all = ["tracing-subscriber/env-filter"]

[profile.wasm-release]
inherits = "release"
opt-level = 'z'
lto = true
codegen-units = 1
panic = "abort"
