[package]
name = "aoc-site"
version = "0.1.0"
edition = "2021"

[dependencies]
aoc22 =       { path = "../2022" }
eyre =        { version = "0.6.8" }
getrandom =   { version = "0.2", features = ["js"] }
log =         { version = "0.4" }
wasm-logger = { version = "0.2" }
wasm-timer =  { version = "0.2.5" }
web-sys =     { version = "0.3.60", features = ["HtmlTextAreaElement"] }
wee_alloc =   { version = "0.4.5" }
yew =         { version = "0.20", features = ["csr"] }
yew-router =  { version = "0.17" }

[profile.release]
panic = 'abort'
codegen-units = 1
opt-level = 's'
lto = true
