[package]
name = "day02"
version = "0.1.0"
authors = ["MaxOhn <ohn.m@hotmail.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
rgx = ["regex", "lazy_static"]

[dependencies.bytecount]
version = "0.6"

[dependencies.regex]
optional = true
version = "1.4"

[dependencies.lazy_static]
optional = true
version = "1.4"

[dependencies.util]
path = "../util"