[package]
name = "aoc-ferris"
version = "0.1.0"
edition = "2021"

[dependencies]
arrayvec = "0.7"
bytemuck = "1"
itertools = "0.10"
rayon = "1"
regex = "1"
memchr = "2"
core_simd = { git = "https://github.com/rust-lang/portable-simd" }
rustc-hash = "1"

[dev-dependencies]
criterion = "*"

[[bench]]
name = "day18"
harness = false